# apigee-template-generator

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  PROMPT_IMPLEMENT_COOL_SOLID_SHADOW.md  PROMPT_MULTI_PRODUCTS.md  PROMPT_UI_CANVAS_SWISS_DESIGN.md  PROMPT_URL_VARIABILIZATION.md  README.md  docker-documentation.html  help-bubbles-preview.html  home-proposals.html  kvm-design-proposals.html  pom.xml  table-preview.html  tmpclaude-89e0-cwd
.github/workflows/: release.yml
UI Syles/: Template_Gemini.html  canvas_preview.html  canvas_preview_backgrounds.html  canvas_preview_backgrounds_v2.html  claude_code_prompt.md  swiss-design-prompt.md  swiss_design_reference.html
apigee-react-generator/: .env.example  APPLICATION_STATUS.md  AZURE_DEVOPS_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  USAGE_EXAMPLE.md  index.html  package-lock.json  package.json  tailwind.config.js  test-generation.ts  vite.config.ts  vitest.config.ts
apigee-react-generator/data/: Generixgroup8-B2B-GIS-Invoice_Services_V3-1.1.0-resolved.json  Swagger SVEA.json  Unified-Post-API.yaml  customer.yaml
apigee-react-generator/docs/: USER_GUIDE.md
apigee-react-generator/public/: architecture-canvas-preview.html  step-canvas-preview.html  ui-proposals.html
apigee-react-generator/scripts/: bump-version.js  generate-icon.cjs
apigee-react-generator/src-tauri/: Cargo.toml  tauri.conf.json
apigee-react-generator/src-tauri/capabilities/: default.json
apigee-react-generator/src-tauri/icons/: icon.icns
apigee-react-generator/src-tauri/src/: lib.rs  oauth.rs
(+174 files in other folders)
